--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-
+      - name: Perform Scan
       - uses: ShiftLeftSecurity/scan-action@master
         env:
           VDB_HOME: ${{ github.workspace }}/vdb
