--- a/.sastscanrc
+++ b/.sastscanrc
@@ -3,6 +3,6 @@
     "Java Source Analyzer": {"max_critical": 2, "max_high": 5, "max_medium": 15},
     "Class File Analyzer": {"max_critical": 2, "max_high": 5, "max_medium": 15},
     "Shell Script Analysis": {"max_critical": 2, "max_high": 5, "max_medium": 15},
-    "Security Audit for Infrastructure": {"max_critical": 2, "max_high": 5, "max_medium": 15},
+    "Security Audit for Infrastructure": {"max_critical": 2, "max_high": 5, "max_medium": 15}
   }
 }
